@@ -1,0 +1,55 @@
+#####################
+# MLES package list #
+#####################
+
+# ap
+glances
+p7zip
+pwgen
+recode
+sbopkg
+unrar
+
+# d
+perl-BerkeleyDB
+perl-digest-hmac
+perl-digest-sha1
+perl-IO-Multiplex
+perl-net-dns
+perl-net-ip
+perl-Net-Server
+
+# l
+libmpdclient
+libsigc++
+libtorrent
+psutil
+pysetuptools
+
+# multimedia
+faac
+faad2
+ffmpeg
+lame
+libcuefile
+libmms
+libmp4v2
+libreplaygain
+libshout
+musepack-tools
+speex
+twolame
+
+# n
+dovecot
+icecast
+mpd
+ncmpc
+postfix
+postgrey
+rtorrent
+squid
+squidGuard
+
+# profile
+user-settings-console
