@@ -59,3 +59,9 @@ n/mpd
 n/icecast
 n/ncmpc
 
+##########################
+# Post-release additions #
+##########################
+l/pysetuptools
+l/psutil
+ap/glances
