@@ -1,0 +1,12 @@
+            |-----handy-ruler------------------------------------------------------|
+pysetuptools: pysetuptools (a collection of enhancements to Python distutils)
+pysetuptools:
+pysetuptools: Easily build, install, upgrade, and uninstall Python packages!
+pysetuptools:
+pysetuptools: Setuptools is a fully-featured, actively-maintained, and stable
+pysetuptools: library designed to facilitate packaging Python projects, where
+pysetuptools: packaging includes Python package and module definitions,
+pysetuptools: distribution package metadata, test hooks, project installation,
+pysetuptools: platform-specific details, and Python 3 support.
+pysetuptools:
+pysetuptools: Package created by Niki Kovacs <info@microlinux.fr>
