@@ -1,3 +1,8 @@
+Tue Mar  4 11:48:58 CET 2014
+l/pysetuptools-2.1-i486-1_microlinux.txz: Added.
+l/psutil-1.2.1-i486-1_microlinux.txz: Added.
+ap/glances-1.7.2-i486-1_microlinux.txz: Added.
++--------------------------+
 Mon Dec 23 07:04:19 CET 2013
 Microlinux Enterprise Server 14.0 32-bit released! This is an LTS release,
 which means packages will be maintained for as long as the underlying Slackware
